--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"REPO_CREATED","testStatus":2,"currentTestResult":true,"workingDirectory":"C:\\Users\\babiv\\MissionRnDProjects\\basics"}
+{"gitStatus":"REPO_CREATED","testStatus":3,"currentTestResult":null,"workingDirectory":"C:\\Users\\babiv\\MissionRnDProjects\\basics"}
